# instagram-autoresponder

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  ci-test-requirements.txt  config.json  main.py  pyproject.toml  run.py  setup.sh
.github/workflows/: ci-test.yml  publish.yml
instagram_autoresponder/: __init__.py  instagram_autoresponder.py
tests/: test_instagram_autoresponder.py
