[tool.poetry]
name = "instagram-autoresponder"
version = "0.0.2a0"
license = "LICENSE"
readme = "README.md"
description = "Automatically respond to Instagram direct messages based on predefined rules."
authors = ["Shubham Raj <shubhamraj2202@gmail.com>"]
include = ["run.py", "instagram_autoresponder*"]
exclude = ["tests*"]

[tool.poetry.dependencies]
python = "^3.11"
instagrapi = "*"
Pillow = "*"

[tool.poetry.dev-dependencies]
black = "*"
pre-commit = "*"

[tool.poetry.group.test.dependencies]
pytest = "*"
pytest-cov = "*"
codecov = "*"

[tool.poetry.scripts]
run = "run:execute"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
